--- a/.htaccess
+++ b/.htaccess
@@ -18,7 +18,8 @@ RewriteRule ^ %1%3%{REQUEST_URI} [R=301,L]
 
 ### Remove Trailing / ##################################################
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_URI} (.
+RewriteCond %{REQUEST_URI} (.+)/$
+RewriteRule ^ %1 [R=301,L]
 	
 ### Force HTTPS #########################################################
 RewriteEngine On
