--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ Header append X-FRAME-OPTIONS "SAMEORIGIN"
 Header add Feature-Policy none
 Header add Referrer-Policy same-origin
 Header add X-XSS-Protection "1"
-Header add Content-Security-Policy "default-src https:"
+#Header add Content-Security-Policy "default-src https:"
 
 ### Remove Trailing / ##################################################
 RewriteCond %{REQUEST_FILENAME} !-d
