--- a/.htaccess
+++ b/.htaccess
@@ -58,7 +58,7 @@ AddOutputFilterByType DEFLATE application/javascript
 AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
-### Redirect Curl to Minimal page  #######################################
-RewriteCond %{HTTP_USER_AGENT} curl 
-RewriteRule ^ https://ip.cjthedj97.me/m/ [P]
+#### Redirect Curl to Minimal page  #######################################
+#RewriteCond %{HTTP_USER_AGENT} curl 
+#RewriteRule ^ https://ip.cjthedj97.me/m/ [P]
 
