--- a/.htaccess
+++ b/.htaccess
@@ -59,7 +59,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
 #### Redirect Curl to Minimal page  #######################################
-SSLProxyEngine On
-RewriteCond %{HTTP_USER_AGENT} curl 
-RewriteRule ^ https://ip.cjthedj97.me/m/ [P]
+#SSLProxyEngine On
+#RewriteCond %{HTTP_USER_AGENT} curl 
+#RewriteRule ^ https://ip.cjthedj97.me/m/ [P]
 
