--- a/.htaccess
+++ b/.htaccess
@@ -59,6 +59,6 @@ AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
 #### Redirect Curl to Minimal page  #######################################
-#RewriteCond %{HTTP_USER_AGENT} "*curl*" 
-#RewriteRule ^ /m/ [P]
+RewriteCond %{HTTP_USER_AGENT} "*curl*" 
+RewriteRule ^ /m/ [P]
 
