--- a/.htaccess
+++ b/.htaccess
@@ -59,6 +59,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
 #### Redirect Curl to Minimal page  #######################################
+SSLProxyEngine On
 RewriteCond %{HTTP_USER_AGENT} curl 
 RewriteRule ^ ip.cjthedj97.me/m/ [P]
 
