--- a/.htaccess
+++ b/.htaccess
@@ -59,5 +59,5 @@ AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
 ### Redirect Curl to Minimal page  #######################################
-RewriteCond %{HTTP_USER_AGENT} curl 
-RewriteRule ^ https://ip.cjthedj97.me/m/ [R=301]
+#RewriteCond %{HTTP_USER_AGENT} curl 
+#RewriteRule ^ https://ip.cjthedj97.me/m/ [R=301]
